# lit-review-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  columns_config.json  dashboard_api.py  process_papers.py  pyproject.toml  requirements.txt
.github/workflows/: publish-ghcr.yml
dashboard-frontend/: index.html  package.json
dashboard-frontend/src/: App.jsx  styles.css
dashboard_ui/: index.html
